--- a/blogicum/templates/blog/profile.html
+++ b/blogicum/templates/blog/profile.html
@@ -34,7 +34,7 @@
         <img src="{{ post.image.url }}" class="img-fluid mb-3" alt="{{ post.title }}" style="max-height: 300px;">
       {% endif %}
       <p>{{ post.text|truncatewords:50 }}</p>
-      <p class="text-muted">Комментариев: {{ post.comment_count }}</p>
+      <p class="text-muted">Комментариев: ({{ post.comment_count }})</p>
       <a href="{% url 'blog:post_detail' post.id %}" class="btn btn-sm btn-primary">
         Читать далее
       </a>
