--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -11,7 +11,6 @@
       <img src="{{ post.image.url }}" class="img-fluid mb-3" alt="{{ post.title }}">
     {% endif %}
     <p>{{ post.text|linebreaksbr }}</p>
-    
     {% if user == post.author %}
       <div class="btn-group" role="group">
         <a href="{% url 'blog:edit_post' post.id %}" class="btn btn-primary">
@@ -28,15 +27,16 @@
   
   <section class="comments mt-5">
     <h3>Комментарии ({{ comments.count }})</h3>
-    
-    {% if user.is_authenticated %}
-      <form method="post" action="{% url 'blog:add_comment' post.id %}" class="mb-4">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Отправить</button>
-      </form>
-    {% endif %}
-    
+{% if user.is_authenticated %}
+  <form method="post" action="{% url 'blog:add_comment' post.id %}" class="mb-4">
+    {% csrf_token %}
+    <div class="mb-3">
+      <label for="id_text" class="form-label">Ваш комментарий:</label>
+      <textarea name="text" id="id_text" class="form-control" rows="3" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Отправить</button>
+  </form>
+{% endif %}
     {% for comment in comments %}
       <div class="card mb-3">
         <div class="card-body">
