--- a/blogicum/templates/blog/comment.html
+++ b/blogicum/templates/blog/comment.html
@@ -20,7 +20,17 @@
         <div class="card-body">
           <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            <div class="mb-3">
+              <label for="{{ form.text.id_for_label }}" class="form-label">
+                {{ form.text.label }}
+              </label>
+              {{ form.text }}
+              {% if form.text.errors %}
+                <div class="alert alert-danger mt-1">
+                  {{ form.text.errors }}
+                </div>
+              {% endif %}
+            </div>
             <button type="submit" class="btn btn-primary">
               {% if request.resolver_match.view_name == 'blog:add_comment' %}
                 Отправить
